--- a/index.html
+++ b/index.html
@@ -1,9 +1,43 @@
 <!doctype html>
 <html lang="en-us">
 <head>
-  <title>Your Name</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width" initial-scale="1.0">
+  <title>Assignment Portal - Paulo Victor</title>
+  <meta name="description" content="resume, perfil, Assignment Portal for Fall 2020 semester - Paulo Victor Cavalcante">
+  <link href="CSS/style.css" rel="stylesheet">
 </head>
 <body>
- <h1>Your Name</h1>
+  <header>
+      <h1>Paulo Victor Cavalcante</h1>
+      <h2>WDD230: Assignment Portal</h2>
+  </header>
+  <nav>
+      <ul>
+        <li>Lesson 2: <a href="https://byui.instructure.com/courses/113942/assignments/4545613?module_item_id=12465494">Assignment link</a></li>
+        <li>Lesson 3: <a href="#">Assignment link</a></li>
+        <li>Lesson 4: <a href="#">Link | Link</a></li>
+      </ul>
+  </nav>
+  <main>
+    <img src="IMAGES/rsz_1_29.jpg">
+  </main>
+  <footer>
+    &copy; 2020 | Paulo Victor Cavalcante | Brazil | <a href="https://www.byui.edu/online">BYUI Online Learning</a>
+    Last updated: <span id="currentdate"></span>
+  </footer>
+  <script>
+    var week = [Sunday, Monday, Tuesday, Wednesday, Thursday, Friday, Saturday];
+    var month = [January, February, March, May, June, July, August, September, Octuber, November, December];
+     
+    var day = new Date();
+    var weekDay = week[day.getDay()];
+    var wMonth = month[day.getMonth()];
+    var year = day.getFullYear();
+    var realTime = 
+    var completeDate = day + "/" + month + "/" + year;
+
+    
+  </script>
 </body>
 </html>  
